# bart

./: .codespellrc  .gitignore.main  .gitlab-ci.yml  .travis.yml  ACKNOWLEDGEMENTS  CMakeLists.txt  Dockerfile  INSTALL.md  LICENSE  Makefile  README  README.md  ar_lock.sh  archive.html  bart.spec  bartview.py  bbox  build_new.sh  build_targets.mk  build_webasm.sh  doxyconfig  examples.html  features.html  genctags  git-version.sh  index.html  installation.html  installation_windows.html  ismrm21.html  libbart-dev.install  libbart-devel.spec  makedoc.sh  msys_setup.sh  octave-bart.spec  publications.html  rpkg.macros  startup.m  startup.py  startup.sh  sub  (+7 more)
.github/workflows/: c-cpp.yml  linux.yml  macos-arm.yml
Makefiles/: README.md
cmake/: BARTConfig.cmake.in  BARTFindBLASlib.cmake  FindATLAS.cmake  FindBLASlib.cmake  FindBOpenMP.cmake  FindBPython.cmake  FindCUDAlibs.cmake  FindFFTW.cmake  FindLAPACKE.cmake  FindMatlab.cmake  FindOpenBLAS.cmake  FindPythonSupport.cmake  FindlibFlame.cmake  bart_configure_add_header.cmake  bart_install.cmake  bart_macros.cmake  bart_options.cmake  bart_python.cmake  tests_data_generation.cmake.in  uninstall.cmake
commands/: .gitignore  sub
doc/: applications.txt  bart.1  bitmasks.txt  building.txt  cmake_building.txt  commands.txt  debugging.txt  dimensions-and-strides.txt  distributed-architectures.txt  environment.txt  fft.txt  nufft.md  performance.txt  phantom.txt  pics.txt  pytorch.txt  random-numbers.txt  references.txt  resize.txt  sequence.txt  streaming.md  style.txt  tensorflow.txt  webasm.txt
doc/singularity/: README.md  Readme.md  bart_debian.def  bart_ubuntu.def
intel_kernels/: Makefile  intel_kernels.h  jtnormal_intel.c  lrthresh_intel.c  sort_intel.cc
matlab/: bart.m  get_bart_path.m  imshow3.m  readcfl.m  test_bart.m  writecfl.m  wslPathCorrection.m
packaging/: CPackConfig.cmake  bart.icon.in.rc
pkg/python/: pyproject.toml
pkg/python/bart/: __init__.py  bart.py  cfl.py  wslsupport.py
pkg/rpm/: bart.spec  libbart-devel.spec  octave-bart.spec  rpkg.conf  rpkg.macros
python/: bart.py  bart_tf.py  bartview3.py  cfl.py  splines_from_svg.py  wslsupport.py
rules/: add_node_shebang.sh  box.mk  calib.mk  dfwavelet.mk  estvar.mk  grecon.mk  ismrm.mk  iter.mk  lapacke.mk  linops.mk  lowrank.mk  make_symbol_table.sh  misc.mk  moba.mk  na.mk  nlops.mk  noir.mk  noncart.mk  num.mk  sake.mk  sense.mk  simu.mk  update-if-changed.sh  update-version.sh  update_commands.sh  update_version.sh  wavelet.mk  wavelet2.mk  wavelet3.mk
save/fftw/: README.txt
save/nsv/: README.txt
scripts/: affine_kspace.sh  bart_completion.sh  create_toolgraph.py  espirit_econ.sh  grasp.sh  kspace_precond.sh  life.sh  octview.m  phantom.sh  profile.sh  radial_dcf.sh  rovir.sh  rtnlinv.m  rtreco.sh
src/: affinereg.c  avg.c  bart.c  bart_embed_api.h  bbox.c  bench.c  bin.c  bitmask.c  bloch.c  bpsense.c  cabs.c  calc.c  caldir.c  calmat.c  carg.c  casorati.c  cc.c  ccapply.c  cdf97.c  circshift.c  cmag.c  coils.c  compress.c  conj.c  conv.c  conway.c  copy.c  cpyphs.c  creal.c  crop.c  cunet.c  dataconvert.c  delta.c  denoise.c  denoising.c  ecalib.c  ecaltwo.c  epg.c  estcov.c  estdelay.c  (+132 more)
src/calib/: bin.c  bin.h  calib.c  calib.h  calibcu.cu  calibcu.h  calmat.c  calmat.h  calmat_calib.c  cc.c  cc.h  delays.c  delays.h  direct.c  direct.h  estcov.c  estcov.h  estvar.c  estvar.h  estvar_calib.c  grog.c  grog.h  softweight.c  softweight.h  ssa.c  ssa.h  walsh.c  walsh.h
src/dfwavelet/: dfwavelet.c  dfwavelet.h  dfwavelet_impl.h  dfwavelet_kernels.cu  dfwavelet_kernels.h  prox_dfwavelet.c  prox_dfwavelet.h
src/estvar/: estvar.c
src/geom/: brain.c  brain.h  draw.c  draw.h  logo.c  logo.h  polygon.c  polygon.h  polyhedron.c  polyhedron.h  triangle.c  triangle.h
src/grecon/: grecon.c  grecon.h  italgo.c  italgo.h  losses.c  losses.h  model.c  model.h  network.c  network.h  opt_iter6.c  opt_iter6.h  optreg.c  optreg.h  parslices.c  parslices.h  priors.c  priors.h
src/ismrm/: read.c  read.cc  read.h  xml_wrapper.cc  xml_wrapper.h
src/iter/: admm.c  admm.h  asl.c  asl.h  batch_gen.c  batch_gen.h  italgos.c  italgos.h  iter.c  iter.h  iter2.c  iter2.h  iter2_affine.c  iter2_affine.h  iter3.c  iter3.h  iter4.c  iter4.h  iter5.c  iter5.h  iter6.c  iter6.h  iter6_ops.c  iter6_ops.h  iter_dump.c  iter_dump.h  itop.c  itop.h  lad.c  lad.h  lsqr.c  lsqr.h  misc.c  misc.h  monitor.c  monitor.h  monitor_iter6.c  monitor_iter6.h  niht.c  niht.h  (+15 more)
src/lapacke/: README
src/linops/: casorati.c  casorati.h  decompose_complex.c  decompose_complex.h  finite_diff.c  finite_diff.h  fmac.c  fmac.h  fmac_linops.c  grad.c  grad.h  linop.c  linop.h  lintest.c  lintest.h  realval.c  realval.h  rvc.c  rvc.h  sampling.c  sampling.h  someops.c  someops.h  sum.c  sum.h  tv.c  ufft.c  ufft.h  waveop.c  waveop.h
src/lowrank/: batchsvd.c  batchsvd.h  lrthresh.c  (+3 more)
stests/: phantom.mk
tests/: CMakeLists.txt  asl.mk  bin.mk  bitmask.mk  calc.mk  casorati.mk  cc.mk  ccapply.mk  cdf97.mk  coils.mk  compress.mk  copy.mk  denoise.mk  denoising.mk  ecalib.mk  estdelay.mk  estscaling.mk  estshift.mk  extract.mk  fakeksp.mk  fft.mk  filter.mk  flatten.mk  fmac.mk  fovshift.mk  gmm.mk  gpu.mk  grid.mk  grog.mk  homodyne.mk  io.mk  ismrmrd.mk  ismrmrd_h5tocfl.py  itsense.mk  join.mk  linsub.mk  lrmatrix.mk  measure.mk  moba.mk  mobafit.mk  (+60 more)
tests/geom/: flower.cfl  flower.hdr  flower2.cfl
utests/: .gitignore  .gitignore.main  Makefile  README.md  build_run_utests.sh  exp_grad.pb  exp_grad_jac.pb  exp_grad_jac_real.pb  minunit.h  test_adc_rf.c  test_affine.c  test_angle_calc.c  test_asl.c  test_batchsvd.c  test_biot_savart.c  test_biots.c  test_blas.c  test_casorati.c  test_conv.c  test_convcorr.c  test_cuda_affine.c  test_cuda_convcorr.c  test_cuda_flpmath.c  test_cuda_flpmath2.c  test_cuda_gpukrnls.c  test_cuda_memcache_clear.c  test_cuda_multind.c  test_cuda_rand.c  test_cuda_shuffle.c  test_cudafft.c  test_delayed.c  test_epg.c  test_events.c  test_fft.c  test_fib.c  test_filter.c  test_flash.c  test_flpmath.c  test_flpmath.h  test_flpmath2.c  (+74 more)
web/: serve.py
(+544 files in other folders)
